--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+*{
+   margin: 0;
+   padding: 0;
+ 
+ 
+ 
+
+ }
+
+ html{
+   font-size: 62.5%;
+   font-family: 'Josefin Sans', sans-serif;
+ }
+
+ :root{
+
+  --whiteColor:#fff;
+  --redColor:	#DC143C;
+ }
+
+
+.cardlist{
+width: 90vw;
+margin: 0 auto;
+display: grid;
+grid-template-columns:repeat(auto-fill, minmax(30rem, 1fr));
+
+grid-column-gap: 5rem;
+padding: 10rem 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ .card-container{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   text-align: justify;
+   align-items: center;
+   width: 80%;
+   padding: 4rem;
+   margin:4rem 0 4rem 0;
+   border: 0.1rem solid red;
+  
 }
+.card-title{
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  margin-bottom: 2rem;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.card-text{
+  font-size: 1.3rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.delete-btn{
+  background-color: red;
+  border: none;
+  outline-style: none;
+  width: 100%;
+  margin-top: 5rem;
+  padding: 1rem 0;
 }
